--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,261 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
+:root {
+  --primary: #5eb34e;
+  --secondary: #011847;
+  --pale-yellow: #9fbd48;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.expandable {
+  display: flex !important;
+  align-items: baseline !important;
+  justify-content: flex-start !important;
+  gap: 2px;
+
+  span.mat-icon {
+    font-size: 14px;
+    line-height: 0 !important;
+    outline: none !important;
+    outline-style: none !important;
+  }
+  img {
+    color: #fff;
+  }
+}
+html,
+body {
+  height: 100%;
+  * {
+    transition: all 300ms;
+  }
+  button,
+  a {
+    cursor: pointer;
+  }
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-color: var(--primary) !important;
+  box-sizing: border-box;
+  padding: 0 !important;
+  margin: 0 !important;
+  overflow: auto;
+  overflow-x: hidden;
+
+  font-family: "Red Hat Display", sans-serif;
+  font-optical-sizing: auto;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    font-family: "Red Hat Display", sans-serif;
+    font-optical-sizing: auto;
+  }
+}
+
+.container {
+  max-width: 90%;
+  margin: 0 auto;
+
+  @media screen and (min-width: 1440px) {
+    overflow-x: hidden !important;
+    max-width: 1280px !important;
+    width: 100%;
+  }
+
+  @media screen and (min-width: 2560px) {
+    overflow-x: hidden;
+    max-width: 2000px;
+    width: 100%;
+  }
+
+  @media screen and (max-width: 425px) {
+    overflow-x: hidden;
+    max-width: 380px !important;
+    width: 100 !important;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 0 20px;
+    width: calc(100vw - 70px);
+  }
+}
+.mat-icon {
+  font-family: "Material Icons" !important;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: "liga";
+}
+a {
+  &:hover {
+    color: var(--secondary) !important;
+  }
+  &.active {
+    color: var(--secondary) !important;
+  }
+}
+
+// header {
+//   height: 70px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   z-index: 10;
+
+//   .header-left {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+
+//     .logo {
+//       width: 150px;
+//       text-decoration: none;
+//       color: var(--primary);
+
+//       img {
+//         width: 100%;
+//         height: 100%;
+//         object-fit: contain;
+//       }
+//     }
+
+//     nav {
+//       margin-left: 50px;
+
+//       .login-signup {
+//         display: none;
+//       }
+
+//       ul {
+//         display: flex;
+//         list-style: none;
+
+//         li a {
+//           display: block;
+//           color: var(--primary);
+//           font-size: 18px;
+//           padding: 5px 10px;
+//           transition: 0.2s;
+//           text-decoration: none;
+//           text-transform: uppercase;
+
+//           @media only screen and (max-width: 768px) {
+//             color: #fff;
+//             text-align: left;
+//             padding: initial;
+//             margin-bottom: 10px;
+//           }
+
+//           &:hover,
+//           &.active {
+//             color: var(--secondary);
+//           }
+//         }
+//       }
+//     }
+//   }
+
+//   .header-right {
+//     display: flex;
+//     align-items: center;
+//     justify-content: flex-end;
+
+//     .hamburger {
+//       margin-left: 20px;
+//       cursor: pointer;
+//       display: none;
+
+//       div {
+//         width: 30px;
+//         height: 2px;
+//         margin: 6px 0;
+//         background: var(--primary);
+//       }
+//     }
+//   }
+
+//   .login-signup {
+//     color: var(--primary);
+//     font-weight: bold;
+
+//     a {
+//       display: inline-block;
+//       background: var(--secondary);
+//       color: #fff;
+//       padding: 8px 12px;
+//       border-radius: 5px;
+//       transition: 0.2s;
+//       text-decoration: none;
+//     }
+//   }
+// }
+
+// @media only screen and (max-width: 1000px) {
+//   header .header-right .hamburger {
+//     display: block;
+//   }
+
+//   header .header-left nav {
+//     margin: 0;
+//     position: absolute;
+//     top: -100%;
+//     left: 0;
+//     height: fit-content;
+//     background-color: #0b2239;
+//     padding: 30px;
+//     transition: 0.3s;
+//     text-align: left;
+//     z-index: -1;
+//   }
+
+//   header .header-left nav.active {
+//     top: 70px;
+//   }
+
+//   header .header-left nav ul {
+//     display: block;
+//   }
+// }
+
+@media only screen and (max-width: 500px) {
+  nav .login-signup {
+    display: block;
+    margin-top: 20px;
+    color: #fff;
+  }
+
+  header .header-right .login-signup {
+    display: none;
+  }
+}
