refactor: refactored the header

--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row flex">
       <div class="left">
-        <h1>Perfect BimaTrust&reg; and Insurer Intergation for your CRM</h1>
+        <h1>Perfect Claims and Underwriting Intergation for your CRM</h1>
         <p>
-          Welcome to BimaTrust®, your gateway to seamless insurance brokerage
-          solutions in Africa. Empowering you to safeguard what matters most, we
+          Welcome to BimaTrust® Worksuite, your gateway to seamless insurance
+          brokerage in Africa. Empowering you to safeguard what matters most, we
           offer a trusted platform designed to simplify your insurance journey.
         </p>
         <div class="buttons">
