--- a/src/app/web/wrapper.component.html
+++ b/src/app/web/wrapper.component.html
@@ -52,3 +52,67 @@
 <main>
   <router-outlet></router-outlet>
 </main>
+
+<div class="footer">
+  <div class="container">
+    <div class="top"></div>
+    <div class="center">
+      <div class="left">
+        <img src="/assets/logos/lilac.png" alt="" />
+      </div>
+      <div class="center">
+        <p>Quick Links</p>
+        <ul>
+          <li><a href="/features">Features</a></li>
+          <li>
+            <a href="https://www.bdcomputinglimited.co.ke" target="_blank"
+              >Our Company</a
+            >
+          </li>
+          <li><a href="/demo-request">Request for Demo</a></li>
+          <li>
+            <a href="https://www.bdcomputinglimited.co.ke/contact-us"
+              >Contact Us</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="right">
+        <p>Get our app On:</p>
+        <div class="logos">
+          <img src="/assets/logos/play-store.png" alt="" />
+          <img src="/assets/logos/apple-store.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="bottom">
+      <p>
+        This website and its content is the property of BD Computing and is
+        protected by copyright laws. All materials and information presented on
+        this website, including but not limited to text, graphics, logos,
+        images, audio clips, video clips, data compilations, and software, are
+        the exclusive property of BD Computing or its content providers. The
+        content of this website may not be copied, distributed, modified, or
+        used in any way without the prior written consent of BD Computing.
+        Unauthorised use or reproduction of any content on this website may
+        result in legal action. BD Computing reserves the right to modify,
+        update, or discontinue any aspect of this website, including these
+        copyright terms, at any time without notice. By using this website, you
+        agree to be bound by the current version of these terms and conditions.
+      </p>
+    </div>
+    <div class="copyright">
+      <div class="left">
+        &copy;2023 - 2024 | BimaTrust&reg;. All Rights Reserved
+      </div>
+      <div class="right">
+        <p>
+          Powered by
+          <a href="https://www.bdcomputinglimited.co.ke"
+            >BD Computing Limited&reg;</a
+          >
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
