--- a/src/app/web/wrapper.component.scss
+++ b/src/app/web/wrapper.component.scss
@@ -1,8 +1,13 @@
 nav {
   position: fixed;
   width: 100%;
-  background-color: #070d1f;
-
+  background-color: var(--primary);
+  background: linear-gradient(
+    90deg,
+    var(--pale-yellow) 0%,
+    var(--green) 100%
+  ) !important;
+  z-index: 999;
   .wrapper {
     position: relative;
     max-width: 1300px;
@@ -41,7 +46,7 @@ nav {
           border-radius: 5px;
           transition: all 0.4 ease;
           &:hover {
-            background: #3664f4;
+            color: var(--primary) !important;
           }
         }
 
@@ -63,14 +68,20 @@ nav {
         top: 70px;
         opacity: 0;
         visibility: hidden;
+
         .content {
-          background: #070d1f;
+          background: linear-gradient(
+            90deg,
+            var(--pale-yellow) 0%,
+            var(--green) 100%
+          ) !important;
           border: 10px;
           padding: 25px 40px;
           display: flex;
           align-items: flex-start;
           justify-content: space-between;
           width: 100%;
+
           .main {
             width: 25%;
             line-height: 45px;
@@ -112,4 +123,104 @@ nav {
 }
 main {
   padding-top: 70px;
+}
+
+.footer {
+  // background: linear-gradient(
+  //   90deg,
+  //   var(--primary) 0%,
+  //   var(--green) 100%
+  // ) !important;
+  background-color: var(--primary);
+
+  .container {
+    padding-top: 50px !important;
+    padding-bottom: 50px !important;
+    color: #fff;
+
+    .center {
+      margin-bottom: 30px;
+      display: grid;
+      grid-template-columns: 4fr 3fr 6fr;
+      gap: 20px;
+      .left {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 10px;
+        img {
+          height: 120px;
+        }
+        p {
+          font-size: 12px;
+          width: 95%;
+        }
+      }
+      .center {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 10px;
+        p {
+          padding: 0;
+        }
+        ul {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          column-gap: 20px;
+          row-gap: 3px;
+          li {
+            list-style: none;
+            margin-bottom: 10px;
+
+            a {
+              color: #fff;
+              text-decoration: none;
+            }
+          }
+        }
+      }
+      .right {
+        gap: 10px;
+        p {
+          font-size: 16px;
+          font-weight: bold;
+          margin-bottom: 10px;
+        }
+        .logos {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          gap: 20px;
+          img {
+            height: 80px;
+            // mix-blend-mode: multiply;
+            background-color: #fff;
+          }
+        }
+      }
+    }
+    .bottom {
+      p {
+        font-size: 12px;
+        margin-bottom: 15px;
+      }
+    }
+    .copyright {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+      p {
+        font-weight: 400;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+    }
+  }
 }
