--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -2,14 +2,17 @@
   <div class="container">
     <div class="row flex">
       <div class="left">
-        <h1>Perfect Claims and Underwriting Intergation for your CRM</h1>
+        <h1>
+          Perfect <span>Claims</span> and <span>Underwriting</span> Intergation
+          for your Insurance Business
+        </h1>
         <p>
           Welcome to BimaTrust® Worksuite, your gateway to seamless insurance
           brokerage in Africa. Empowering you to safeguard what matters most, we
           offer a trusted platform designed to simplify your insurance journey.
         </p>
         <div class="buttons">
-          <button>
+          <button class="btn-primary">
             <i class="bi bi-bookmark-check-fill"></i>
             Book a Demo
           </button>
@@ -40,6 +43,26 @@
         insurance brokerage. Trust in BimaTrust for expertly crafted solutions
         that meet your insurance needs with precision and innovation.
       </p>
+    </div>
+  </div>
+</div>
+<div class="login-mock container">
+  <div class="left">
+    <img src="/assets/mockups/login-screens.png" alt="Login" />
+  </div>
+  <div class="right">
+    <h3>Security</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. dicta?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. dicta?</p>
+  </div>
+</div>
+
+<div class="code">
+  <div class="container">
+    <div class="left"></div>
+    <div class="right">
+      <img src="/assets/mockups/code.png" alt="" />
+      <!-- <pre id="code"></pre> -->
     </div>
   </div>
 </div>
