refactor: changed the code image

--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -59,7 +59,21 @@
 
 <div class="code">
   <div class="container">
-    <div class="left"></div>
+    <div class="left">
+      <h3>Clean Code</h3>
+      <p>
+        Clean code is crucial for Bima Trust's success. It enhances readability,
+        making it easier for developers to understand and modify the code. This
+        boosts maintainability, allowing swift updates without risking
+        functionality. Collaboration is streamlined, fostering teamwork among
+        developers. Additionally, clean code reduces errors and promotes
+        robustness, crucial for handling financial transactions securely.
+        Ultimately, it leads to a better user experience, enabling quick
+        adaptation to customer needs. Invest in Bima Trust for reliable,
+        scalable, and maintainable software that ensures your financial or
+        insurance operations run smoothly.
+      </p>
+    </div>
     <div class="right">
       <img src="/assets/mockups/code.png" alt="" />
       <!-- <pre id="code"></pre> -->
