--- a/src/app/web/pages/home/home.component.scss
+++ b/src/app/web/pages/home/home.component.scss
@@ -109,6 +109,10 @@
   display: grid;
   grid-template-columns: 8fr 4fr;
   .left {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
     img {
       width: 100%;
     }
@@ -128,12 +132,35 @@ pre {
 }
 
 .code {
+  margin-top: 100px;
   .container {
     display: grid;
-    grid-template-columns: 3fr 5fr;
+    grid-template-columns: 8fr 3fr;
+    column-gap: 50px;
+    .left {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      h3 {
+        margin-bottom: 10px;
+        font-size: 35px;
+        font-weight: bold;
+        color: var(--primary);
+      }
+      p {
+        font-weight: 300;
+        width: 90%;
+      }
+    }
     .right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
       img {
-        width: 100%;
+        height: 500px;
+        width: auto;
+        mix-blend-mode: multiply;
       }
     }
   }
