--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="row flex">
       <div class="left">
         <h1>
-          Perfect <span>Claims</span> and <span>Underwriting</span> Intergation
+          Perfect <span>Claims</span> and <span>Underwriting</span> Integration
           for your Insurance Business
         </h1>
         <p>
