--- a/src/app/web/pages/home/home.component.scss
+++ b/src/app/web/pages/home/home.component.scss
@@ -1,167 +1,9 @@
-.landing {
-  height: 60vh;
-  .container {
-    height: inherit;
-    .row {
-      height: 100%;
-      display: grid;
-      grid-template-columns: 2fr 2fr;
-      column-gap: 50px;
-      .left {
-        height: inherit;
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        flex-direction: column;
-        gap: 10px;
-        h1 {
-          font-size: 45px;
-          line-height: 48px;
-          span {
-            color: var(--green);
-          }
-        }
-        p {
-          margin-top: 10px;
-          margin-bottom: 20px;
-        }
-        .buttons {
-          display: flex;
-          align-items: center;
-          justify-content: flex-start;
-          gap: 50px;
-          button {
-            border: none;
-            padding: 16px 20px;
-            cursor: pointer;
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            color: #fff;
-            font-weight: 700;
-            &.tutorial {
-              border: 1px solid var(--green);
-              background-color: transparent;
-              color: var(--green);
-
-              i {
-                color: var(--green);
-              }
-            }
-          }
-        }
-      }
-
-      .right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        img {
-          mix-blend-mode: multiply;
-          width: 100%;
-        }
-      }
-    }
+.media {
+  h3 {
+    font-size: 18px;
   }
-}
-.intro {
-  background-color: var(--green);
-  padding: 20px auto !important;
-  min-height: 100px !important;
-  height: max-content;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  line-height: initial;
-  .content {
-    padding-top: 80px;
-    padding-bottom: 80px;
-    .heading {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 10px initial;
-
-      h2 {
-        padding: 0;
-        margin: 0;
-        font-size: 35px;
-        color: var(--primary) !important;
-        line-height: 35px;
-        margin-bottom: 20px;
-      }
-    }
-    .content-inner {
-      display: grid;
-      grid-template-columns: 1fr;
-      column-gap: 50px;
-      p {
-        color: var(--primary) !important;
-      }
-    }
-  }
-}
-
-.login-mock {
-  display: grid;
-  grid-template-columns: 8fr 4fr;
-  .left {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    img {
-      width: 100%;
-    }
-  }
-  .right {
-    padding-top: 50px;
-
-    h3 {
-      font-size: 35px;
-      font-weight: bold;
-    }
-  }
-}
-
-pre {
-  height: 200px;
-}
-
-.code {
-  margin-top: 100px;
-  .container {
-    display: grid;
-    grid-template-columns: 8fr 3fr;
-    column-gap: 50px;
-    .left {
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      flex-direction: column;
-      h3 {
-        margin-bottom: 10px;
-        font-size: 35px;
-        font-weight: bold;
-        color: var(--primary);
-      }
-      p {
-        font-weight: 300;
-        width: 90%;
-      }
-    }
-    .right {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      img {
-        height: 500px;
-        width: auto;
-        mix-blend-mode: multiply;
-      }
-    }
+  p {
+    font-size: 14px;
+    font-weight: initial;
   }
 }
