--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "./assets/css/footer.css";
 @import url("https://db.onlinewebfonts.com/c/d863218d588265bf96f8febaadafdd18?family=Trip+Sans");
 @font-face {
   font-family: "Axiforma";
@@ -9,7 +10,7 @@
 }
 :root {
   --primary: #011847;
-  --primary-green: #71b548;
+  --primary-green: #15c653;
   --error: #f44900;
   --secondary: #f0772e;
   --dark: #13263c;
@@ -20,7 +21,9 @@
   --light-bg: #f8fafa;
   --yellow: #d1e273;
   --pale-yellow: #9fbd48;
-  --green: #71b548;
+  --green: #15c653;
+  --brown: #f5f2ee;
+  --bright-green: #15c653;
 }
 pre {
   font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console",
@@ -31,139 +34,8 @@ pre {
   color: #fff;
   white-space: pre-wrap;
   overflow-x: auto;
-  // &:focus,
-  // &:hover {
-  //   width: min-content;
-  // }
-}
-i {
-  &.bi {
-    font-size: 20px;
-  }
-}
-.bg-secondary {
-  background: linear-gradient(
-    90deg,
-    var(--green) 0%,
-    var(--primary) 100%
-  ) !important;
-
-  color: #fff !important;
-
-  * {
-    color: #fff !important;
-  }
 }
 
-.bg-dark {
-  background-color: #011847 !important;
-}
-
-.bg-primary {
-  background: linear-gradient(
-    90deg,
-    var(--pale-yellow) 0%,
-    var(--green) 100%
-  ) !important;
-
-  * {
-    color: #fff !important;
-  }
-}
-
-.btn-primary {
-  background: linear-gradient(
-    90deg,
-    var(--pale-yellow) 0%,
-    var(--green) 100%
-  ) !important;
-
-  * {
-    color: #fff !important;
-  }
-
-  transition: all ease-in-out 300ms;
-
-  &:hover {
-    background: linear-gradient(
-      90deg,
-      var(--pale-yellow) 0%,
-      var(--primary) 100%
-    ) !important;
-
-    * {
-      color: #fff !important;
-    }
-  }
-}
-
-.btn-primary-blue {
-  background-color: var(--primary);
-  color: #fff !important;
-
-  i {
-    color: #fff;
-  }
-
-  &:hover {
-    background-color: var(--dark);
-
-    * {
-      color: aliceblue !important;
-    }
-  }
-}
-
-.btn-primary-green {
-  background: var(--green); /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to top,
-    var(--yellow),
-    var(--green)
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to top,
-    var(--yellow),
-    var(--green)
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  color: #fff !important;
-
-  i {
-    color: #fff;
-  }
-
-  &:hover {
-    background-color: var(--dark);
-
-    * {
-      color: aliceblue !important;
-    }
-  }
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.expandable {
-  display: flex !important;
-  align-items: baseline !important;
-  justify-content: flex-start !important;
-  gap: 2px;
-
-  span.mat-icon {
-    font-size: 14px;
-    line-height: 0 !important;
-    outline: none !important;
-    outline-style: none !important;
-  }
-  img {
-    color: #fff;
-  }
-}
 html,
 body {
   height: 100%;
@@ -183,8 +55,6 @@ body {
   box-sizing: border-box;
   padding: 0 !important;
   margin: 0 !important;
-  // overflow: auto;
-  // overflow-x: hidden;
   font-optical-sizing: auto;
   h1,
   h2,
@@ -197,189 +67,6 @@ body {
     font-optical-sizing: auto !important;
   }
 }
-
-.container {
-  max-width: 1300px;
-  margin: 0 auto;
-
-  @media screen and (min-width: 1440px) {
-    overflow-x: hidden !important;
-    max-width: 1280px !important;
-    width: 100%;
-  }
-
-  @media screen and (min-width: 2560px) {
-    overflow-x: hidden;
-    max-width: 2000px;
-    width: 100%;
-  }
-
-  @media screen and (max-width: 425px) {
-    overflow-x: hidden;
-    max-width: 380px !important;
-    width: 100 !important;
-  }
-
-  @media screen and (max-width: 768px) {
-    padding: 0 20px;
-    width: calc(100vw - 70px);
-  }
-}
-.mat-icon {
-  font-family: "Material Icons" !important;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: "liga";
-}
-a {
-  &:hover {
-    color: var(--secondary) !important;
-  }
-  &.active {
-    color: var(--secondary) !important;
-  }
-}
-
-// header {
-//   height: 70px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   z-index: 10;
-
-//   .header-left {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-
-//     .logo {
-//       width: 150px;
-//       text-decoration: none;
-//       color: var(--primary);
-
-//       img {
-//         width: 100%;
-//         height: 100%;
-//         object-fit: contain;
-//       }
-//     }
-
-//     nav {
-//       margin-left: 50px;
-
-//       .login-signup {
-//         display: none;
-//       }
-
-//       ul {
-//         display: flex;
-//         list-style: none;
-
-//         li a {
-//           display: block;
-//           color: var(--primary);
-//           font-size: 18px;
-//           padding: 5px 10px;
-//           transition: 0.2s;
-//           text-decoration: none;
-//           text-transform: uppercase;
-
-//           @media only screen and (max-width: 768px) {
-//             color: #fff;
-//             text-align: left;
-//             padding: initial;
-//             margin-bottom: 10px;
-//           }
-
-//           &:hover,
-//           &.active {
-//             color: var(--secondary);
-//           }
-//         }
-//       }
-//     }
-//   }
-
-//   .header-right {
-//     display: flex;
-//     align-items: center;
-//     justify-content: flex-end;
-
-//     .hamburger {
-//       margin-left: 20px;
-//       cursor: pointer;
-//       display: none;
-
-//       div {
-//         width: 30px;
-//         height: 2px;
-//         margin: 6px 0;
-//         background: var(--primary);
-//       }
-//     }
-//   }
-
-//   .login-signup {
-//     color: var(--primary);
-//     font-weight: bold;
-
-//     a {
-//       display: inline-block;
-//       background: var(--secondary);
-//       color: #fff;
-//       padding: 8px 12px;
-//       border-radius: 5px;
-//       transition: 0.2s;
-//       text-decoration: none;
-//     }
-//   }
-// }
-
-// @media only screen and (max-width: 1000px) {
-//   header .header-right .hamburger {
-//     display: block;
-//   }
-
-//   header .header-left nav {
-//     margin: 0;
-//     position: absolute;
-//     top: -100%;
-//     left: 0;
-//     height: fit-content;
-//     background-color: #0b2239;
-//     padding: 30px;
-//     transition: 0.3s;
-//     text-align: left;
-//     z-index: -1;
-//   }
-
-//   header .header-left nav.active {
-//     top: 70px;
-//   }
-
-//   header .header-left nav ul {
-//     display: block;
-//   }
-// }
 
 @media only screen and (max-width: 500px) {
   nav .login-signup {
