refactor: add features section

--- a/src/app/web/wrapper.component.html
+++ b/src/app/web/wrapper.component.html
@@ -181,8 +181,10 @@
               focus on what truly matters with {{ appName }}
             </p>
             <div class="address">
-              <span>1989 Don Jackson Lane</span>
-              <span>Call us: <a href="tel:8089569599">808-956-9599</a></span>
+              <span>6040-30100, Ronald Ngala Street, Eldoret, KE</span>
+              <span
+                >Call us: <a href="tel:+254725270930">+254 725 270 930</a></span
+              >
             </div>
           </div>
         </div>
