refactor: fix the footer

--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -216,6 +216,10 @@
     <div class="row justify-content-md-center text-center">
       <div class="col-md-8 col-lg-6">
         <div class="banner_title margin-b-5">
+          <div id="intro-pulse">
+            <div class="circle pulse green"></div>
+            <p>Fully Integrated Insurance OS&reg;</p>
+          </div>
           <h1>Take Your Insurance Brokerage Business to the Next Level</h1>
           <p>
             Say goodbye to the hassle of juggling multiple tools and platforms.
@@ -224,13 +228,16 @@
           </p>
           <button
             type="button"
-            class="btn scale rounded-pill btn-video btn-md btn-primary"
-            data-toggle="modal"
-            data-src="https://www.youtube.com/embed/VvHoHw5AWTk"
-            data-target="#mdllVideo"
+            class="btn scale rounded-pill btn-video btn-md"
+            style="
+              background-color: var(--primary);
+              color: #fff;
+              padding-left: 20px;
+              padding-right: 20px;
+            "
           >
             <i class="tio play_circle"></i>
-            Discover this video
+            Get Started For Free
           </button>
         </div>
       </div>
