--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -384,7 +384,7 @@
             <div class="inner-container-small text-left">
               <span
                 class="bg-light heading-color small rounded-3 px-3 py-2"
-                style="color: var(--primary)"
+                style="color: var(--primary); font-size: 12px"
               >
                 🚀 Innovative features, Measurable results
               </span>
