refactor: fix the nav bar

--- a/src/app/web/wrapper.component.html
+++ b/src/app/web/wrapper.component.html
@@ -1,36 +1,6 @@
 <header>
-  <div class="container" style="background-color: transparent !important">
-    <div class="left">
-      <img src="assets/logos/dark.png" alt="" height="80" />
-    </div>
-    <div class="center">
-      <ul>
-        <li>
-          <a href="#" routerLink="/" routerLinkActive="active">Features</a>
-        </li>
-        <li>
-          <a href="#" routerLink="/about" routerLinkActive="active">Pricing</a>
-        </li>
-      </ul>
-    </div>
-    <div class="right">
-      <ul>
-        <li>
-          <a href="#">Sign In</a>
-        </li>
-        <li>
-          <button
-            class="btn btn-md rounded-pill"
-            style="background-color: var(--green); color: #fff"
-          >
-            Try for Free
-          </button>
-        </li>
-      </ul>
-    </div>
-  </div>
+  <app-navbar></app-navbar>
 </header>
-
 <router-outlet></router-outlet>
 <section
   class="mb-n7"
