--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -1,6 +1,11 @@
 <div
   id="bg-wrap"
-  style="position: absolute; height: 100vh; width: 100vw; z-index: -1"
+  style="
+    position: absolute;
+    height: 100svh !important;
+    width: 100svw !important;
+    z-index: -1;
+  "
 >
   <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
     <defs>
