--- a/src/app/web/wrapper.component.scss
+++ b/src/app/web/wrapper.component.scss
@@ -27,19 +27,9 @@ header {
       }
     }
 
-    .right {
-      ul {
-        list-style: none;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        gap: 20px;
-
-        li {
-          a {
-            text-decoration: none;
-          }
-        }
+    li.right {
+      a {
+        text-decoration: none;
       }
     }
   }
