--- a/src/app/web/widgets/pricing-table/pricing-table.component.html
+++ b/src/app/web/widgets/pricing-table/pricing-table.component.html
@@ -5,7 +5,7 @@
 >
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-sm-8 col-lg-6">
+      <div class="col-md-12 col-sm-8 col-lg-6">
         <!-- Section Heading-->
         <div
           class="section-heading text-center wow fadeInUp"
