feat: get started with auth

--- a/src/app/web/widgets/navbar/navbar.component.html
+++ b/src/app/web/widgets/navbar/navbar.component.html
@@ -6,14 +6,16 @@
       </a>
     </li>
     <li class="item" *ngIf="false"><a href="#">Home</a></li>
-    <li class="item right"><a href="#" routerLink="/register">Sign Up</a></li>
+    <li class="item right"><a href="#" routerLink="/auth/login">Sign In</a></li>
     <li class="item button">
-      <button
+      <a
+        href="#"
+        routerLink="/auth/register"
         class="btn btn-md rounded-pill"
-        style="background-color: var(--green); color: #fff"
+        style="background-color: var(--green); color: #fff; border: none"
       >
         Try for Free
-      </button>
+      </a>
     </li>
     <li class="toggle">
       <a href="#"> <i class="bi bi-list" style="font-size: 30px"></i></a>
