--- a/src/app/auth/auth-wrapper.component.html
+++ b/src/app/auth/auth-wrapper.component.html
@@ -1,15 +1,21 @@
 <main>
-  <app-gradient-background
-    [height]="'100%'"
-    [width]="'100%'"
-  ></app-gradient-background>
+  <app-gradient-background [opacity]="0.4"></app-gradient-background>
 
   <div class="wrapper container">
     <div class="row d-flex">
       <div class="col-lg-7 col-sm-12 col-xl-7 col-md-7">
         <div class="card1">
-          <div class="row justify-content-center mt-4 mb-5 border-line">
-            <!-- <img src="/assets/mockups/dash.png" class="image" /> -->
+          <div
+            class="row justify-content-center mt-4 mb-5 border-line"
+            style="
+              display: flex;
+              align-items: center;
+              overflow-x: hidden;
+              flex-direction: column;
+              justify-content: center;
+            "
+          >
+            <app-features-slider></app-features-slider>
           </div>
         </div>
       </div>
@@ -19,6 +25,18 @@
             <img src="/assets/logos/dark.png" class="logo" />
           </div>
           <router-outlet></router-outlet>
+          <div class="row mt-5">
+            <small class="font-weight-bold">
+              Not in the right place?
+              <a href="#" routerLink="/">Go back to our website</a>
+            </small>
+            <p
+              style="padding-top: 20px; font-size: 14px"
+              class="font-weight-bold"
+            >
+              &copy; {{ year }} {{ appName }}
+            </p>
+          </div>
         </div>
       </div>
     </div>
