--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,6 +1,9 @@
 <section>
   <div class="row mb-4 pt-10">
-    <h6 class="mb-0 mr-4 mt-2 text-left">Sign in with</h6>
+    <h6 class="mb-0 mr-4 mt-2 text-left">Sign in to your Account</h6>
+    <p class="text-muted" style="font-size: 12px">
+      Login to the client account using the magic link or email and password.
+    </p>
     <div class="row mb-3 px-3 mt-3">
       <button
         type="submit"
@@ -17,27 +20,34 @@
     <small class="or text-center">Or</small>
     <div class="line"></div>
   </div>
-  <div class="row">
-    <label class="mb-1"><h6 class="mb-0 text-sm">Email Address</h6></label>
-    <input
-      class="mb-4 form-control form-input"
-      type="text"
-      name="email"
-      placeholder="Enter a valid email address"
-    />
+
+  <div class="row mb-4">
+    <div class="form-group">
+      <label for="emailAddress">Email address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="emailAddress"
+        aria-describedby="emailHelp"
+        placeholder="Enter a valid email address"
+      />
+    </div>
   </div>
   <div class="row">
-    <label class="mb-1"><h6 class="mb-0 text-sm">Password</h6></label>
-    <input
-      type="password"
-      name="password"
-      class="form-control form-input"
-      placeholder="Enter password"
-    />
+    <div class="form-group">
+      <label class="mb-1"> Password </label>
+      <input
+        type="password"
+        name="password"
+        class="form-control form-input"
+        placeholder="Enter password"
+      />
+    </div>
   </div>
   <div class="row mb-4 mt-1">
     <small class="font-weight-bold">
-      Forgot Password? <a href="#" class="ml-auto mb-0 text-sm link"> Reset </a>
+      Forgot Password?
+      <a href="#" class="ml-auto mb-0 text-sm link"> Reset </a>
     </small>
   </div>
   <div class="row mb-3">
