--- a/src/app/shared/widgets/gradient-background/gradient-background.component.html
+++ b/src/app/shared/widgets/gradient-background/gradient-background.component.html
@@ -1,7 +1,7 @@
 <div
   id="bg-wrap"
-  style="position: absolute; z-index: -1; opacity: 0.2"
-  [ngStyle]="{ height,  width }"
+  style="position: absolute; z-index: -99; opacity: 0.2"
+  [ngStyle]="{ height: height, width: width, opacity }"
 >
   <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
     <defs>
