--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -1,7 +1,4 @@
-<app-gradient-background
-  [height]="'100vh'"
-  [width]="'100vw'"
-></app-gradient-background>
+<app-gradient-background></app-gradient-background>
 
 <section class="banner_section" id="home">
   <div class="container" style="padding-top: 150px">
