refactor: fix the header

--- a/src/app/web/pages/home/home.component.html
+++ b/src/app/web/pages/home/home.component.html
@@ -9,7 +9,16 @@
             <div class="circle pulse green"></div>
             <p>Fully Integrated Insurance OS&reg;</p>
           </div>
-          <h1>Take Your Insurance Brokerage Business to the Next Level</h1>
+          <h1>
+            Take Your Insurance Brokerage Business to the
+            <span style="font-weight: 900; color: var(--green)"
+              >Next Level</span
+            >
+            <i
+              class="bi bi-arrow-up-right-circle"
+              style="margin-left: 10px; color: var(--green)"
+            ></i>
+          </h1>
           <p>
             Say goodbye to the hassle of juggling multiple tools and platforms.
             With BimaTrust Workspace®, you can streamline your daily insurance
